--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -127,24 +127,41 @@ $color-blue: #2a6496;
         border-top: $border-spec;
         border-color: $color-light-grey;
         font-size: 12px;
+        height: 60px;
 
         &-logo {
           width: 15%;
         }
         &-race {
-          width: 70%;
+          width: 65%;
           text-align: left;
           color: $color-blue;
 
           &-no {
             color: $color-grey;
           }
+
+          p {
+            margin: 5px;
+          }
         }
         &-time {
-          width: 15%;
+          width: 20%;
           font-weight: bold;
+          text-align: right;
+
+          &--highlight {
+            color: red;
+          }
         }
       }
+    }
+
+    &-message {
+      background-color: $color-white;
+      color: $color-beteasy;
+      padding: 20px;
+      font-size: 12px;
     }
   }
 }
